2010-06-15 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-iaction-tab.c:
	* src/nact/nact-ibasenames-tab.c:
	* src/nact/nact-icapabilities-tab.c:
	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-ienvironment-tab.c:
	* src/nact/nact-ifolders-tab.c:
	* src/nact/nact-iproperties-tab.c:
	* src/nact/nact-ischemes-tab.c:
	* src/nact/nact-main-menubar-edit.c:
	* src/nact/nact-main-menubar-file.c:
	* src/nact/nact-main-tab.h:
	* src/nact/nact-main-window.c:
	* src/nact/nact-match-list.c: Rename main properties.

	* src/nact/nact-main-tab.h:
	* src/nact/nact-main-window.c: Remove unused PROP_SELECTED_ROW property.

	* po/POTFILES.in: Add src/nact/nact-ienvironment-tab.c file.

	* src/nact/nact-ienvironment-tab.c: Connect signals.

2010-06-14 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-icontext-factory.c:
	Change default capabilities to empty list.

	* src/nact/nact-add-capability-dialog.c:
	* src/nact/nact-add-capability-dialog.h:
	* src/nact/nact-add-capability.ui: New files.

	* po/POTFILES.in:
	* src/nact/Makefile.am: Updated accordingly.

	* src/nact/nact-match-list.c:
	* src/nact/nact-match-list.h (nact_match_list_create_model):
	Add match_header parameter.

	* src/nact/nact-ibasenames-tab.c:
	* src/nact/nact-icapabilities-tab.c:
	* src/nact/nact-ifolders-tab.c:
	* src/nact/nact-imimetypes-tab.c:
	* src/nact/nact-ischemes-tab.c: Updated accordingly.

2010-06-13 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-match-list.c:
	* src/nact/nact-match-list.h (nact_match_list_create_model):
	Add on_add_clicked callback parameter.

	* src/nact/nact-ibasenames-tab.c:
	* src/nact/nact-ifolders-tab.c:
	* src/nact/nact-imimetypes-tab.c:
	* src/nact/nact-ischemes-tab.c: Updated accordingly.

	* src/nact/nact-iaction-tab.c:
	Use gtk_bin_get_child() function instead of GTK_BIN()->child.

	* po/POTFILES.in:
	Add src/nact/nact-icapabilities-tab.c, src/nact/nact-ischemes-tab.c.
	Remove src/nact/nact-iconditions-tab.c.

	* src/api/na-core-utils.h: